adding in powershell scripts, plus some additional configuration for parameter passing in volume creation

--- a/NetAppSDK/NetAppV2/NetAppV2.csproj
+++ b/NetAppSDK/NetAppV2/NetAppV2.csproj
@@ -53,6 +53,14 @@
   <ItemGroup>
     <Folder Include="Components\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="PsScripts\CreateAggregate.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="PsScripts\CreateVolume.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
