--- a/NetAppSDK/NetAppBatchTests/NetAppBatchTests.csproj
+++ b/NetAppSDK/NetAppBatchTests/NetAppBatchTests.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SaaSGrid.API, Version=5.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Messaging\ApprendaMessaging\ApprendaMessaging\bin\Release\SaaSGrid.API.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestExecutionResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
