Adding in dev work over the weekend

--- a/NetAppSDK/NetAppSDK/NetAppSDK.csproj
+++ b/NetAppSDK/NetAppSDK/NetAppSDK.csproj
@@ -63,10 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addon.cs" />
-    <Compile Include="ConnectionInfo.cs" />
     <Compile Include="DeveloperOptions.cs" />
-    <Compile Include="Models\Aggregate.cs" />
-    <Compile Include="Models\Disk.cs" />
     <Compile Include="Models\NetAppResponse.cs" />
     <Compile Include="Models\Volume.cs" />
     <Compile Include="NetAppFactory.cs" />
@@ -81,13 +78,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="PsScripts\CreateAggregate.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="PsScripts\CreateSnapMirror.ps1" />
     <None Include="PsScripts\CreateVolume.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="PsScripts\DeleteAggregate.ps1" />
+    <None Include="PsScripts\DeleteSnapMirror.ps1" />
     <None Include="PsScripts\DeleteVolume.ps1" />
   </ItemGroup>
   <ItemGroup>
