Scary that SourceTree isn't picking this up. Here are the commits for the private gitlab repo and the apprenda source on github

--- a/NetAppSDK/NetAppBatchTests/NetAppBatchTests.csproj
+++ b/NetAppSDK/NetAppBatchTests/NetAppBatchTests.csproj
@@ -32,9 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SaaSGrid.API, Version=5.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Messaging\ApprendaMessaging\ApprendaMessaging\bin\Release\SaaSGrid.API.dll</HintPath>
+    <Reference Include="Apprenda.Utils, Version=6.0.999.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SaaSGrid.API.6.0.0.1\lib\net45\Apprenda.Utils.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SaaSGrid.API, Version=6.0.999.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SaaSGrid.API.6.0.0.1\lib\net45\SaaSGrid.API.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
