--- a/NetAppSDK/NetAppSDK/NetAppVolumeAddon.csproj
+++ b/NetAppSDK/NetAppSDK/NetAppVolumeAddon.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
